# humanoid-locomotion

./: .gitignore  README.md
IsaacLab/: README.md  g1_29dof_unfixed.usd
IsaacLab/scripts/reinforcement_learning/rsl_rl/: check_joint_order.py  play_exported.py  play_keyboard.py  policy_inference.py  ros2_policy_node.py
IsaacLab/scripts/reinforcement_learning/rsl_rl/ros2_package/g1_locomotion_policy/: package.xml  setup.py
IsaacLab/scripts/reinforcement_learning/rsl_rl/ros2_package/g1_locomotion_policy/g1_locomotion_policy/: __init__.py
IsaacLab/scripts/reinforcement_learning/rsl_rl/ros2_package/g1_locomotion_policy/launch/: policy.launch.py
IsaacLab/scripts/tools/: convert_g1_inspire_to_floating.py
IsaacLab/source/isaaclab_assets/isaaclab_assets/robots/: unitree.py
IsaacLab/source/isaaclab_tasks/isaaclab_tasks/manager_based/locomotion/velocity/config/g1/: __init__.py  flat_env_cfg.py  flat_env_distillation_cfg.py  rough_env_cfg.py
IsaacLab/source/isaaclab_tasks/isaaclab_tasks/manager_based/locomotion/velocity/config/g1/agents/: rsl_rl_distillation_cfg.py  rsl_rl_ppo_cfg.py
IsaacLab/source/isaaclab_tasks/isaaclab_tasks/manager_based/locomotion/velocity/config/go2/: flat_env_cfg.py
IsaacSim-ros_workspaces/humble_ws/src/humanoid_locomotion_policy_example/g1_fullbody_controller/launch/: g1_fullbody_controller.launch.py
IsaacSim-ros_workspaces/humble_ws/src/humanoid_locomotion_policy_example/g1_fullbody_controller/scripts/: g1_fullbody_controller.py  print_joint_order.py
ROS_workspace/humble_ws/src/humanoid_locomotion_policy_example/g1_fullbody_controller/: CMakeLists.txt  package.xml
ROS_workspace/humble_ws/src/humanoid_locomotion_policy_example/g1_fullbody_controller/policy/: g1_env.yaml  g1_policy.pt
ROS_workspace/humble_ws/src/humanoid_locomotion_policy_example/h1_fullbody_controller/policy/: h1_env.yaml  h1_policy.pt
humble_ws/src/humanoid_locomotion_policy_example/g1_fullbody_controller/scripts/: g1_fullbody_controller.py
humble_ws/src/humanoid_locomotion_policy_example/go2_controller/: CMakeLists.txt  package.xml
humble_ws/src/humanoid_locomotion_policy_example/go2_controller/launch/: go2_controller.launch.py
humble_ws/src/humanoid_locomotion_policy_example/go2_controller/policy/: go2_policy.pt
humble_ws/src/humanoid_locomotion_policy_example/go2_controller/scripts/: go2_controller.py
humble_ws/src/navigation/carter_navigation/maps/: carter_warehouse_navigation.yaml
