<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_controller</name>
  <version>0.1.0</version>
  <description>Controller for the Unitree Go2 quadruped robot using a neural network policy
    trained in IsaacLab with Isaac-Velocity-Flat-Unitree-Go2-v0. Requires PyTorch 2.3.0+.</description>
  <maintainer email="isaac-sim-maintainers@nvidia.com">Isaac Sim</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>launch</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
